# scratch-deep-learning

./: LICENSE  README.md  pyproject.toml
scratch_deep_learning/: neural_network.py  perceptron.py
